--- a/wizard/wizard_view.xml
+++ b/wizard/wizard_view.xml
@@ -8,6 +8,8 @@
             <field name="arch" type="xml">
                 <form string="Generar Abastecimiento">                                         
 		   <footer>
+			<field name="warehouse_id" />
+			<field name="location_id" />
                         <button name="generate_abastecimiento" string="Generar Abastecimientos" 
                                 type="object" class="oe_highlight"/>
                         or
