Added group to wizard form

--- a/wizard/wizard_view.xml
+++ b/wizard/wizard_view.xml
@@ -8,8 +8,10 @@
             <field name="arch" type="xml">
                 <form string="Generar Abastecimiento">                                         
 		   <footer>
-			<field name="warehouse_id" />
-			<field name="location_id" />
+			<group string="Deposito">
+				<field name="warehouse_id" />
+				<field name="location_id" />
+			</group>
                         <button name="generate_abastecimiento" string="Generar Abastecimientos" 
                                 type="object" class="oe_highlight"/>
                         or
