Moved location_id to prod_lot_id

--- a/wizard/wizard_view.xml
+++ b/wizard/wizard_view.xml
@@ -9,7 +9,7 @@
                 <form string="Generar Abastecimiento">                                         
 			<group string="Deposito">
 				<field name="warehouse_id" />
-				<field name="location_id" />
+				<!-- field name="location_id" / -->
 			</group>
 		   <footer>
                         <button name="generate_abastecimiento" string="Generar Abastecimientos" 
